--- a/app/src/main/res/layout/content_dash.xml
+++ b/app/src/main/res/layout/content_dash.xml
@@ -69,7 +69,7 @@
         android:textSize="8dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:gravity="center"
+        android:gravity="bottom"
         android:textColor="#ffffff" />
 
 </RelativeLayout>
