--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     tools:context="ayon.rahman.shafiqur.bptl.MainActivity">
 
     <EditText
+        android:layout_below="@+id/textView19"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
@@ -18,10 +19,10 @@
         android:hint="User Name"
         android:textColor="#000000"
         android:gravity="center"
-        android:layout_marginTop="59dp"
+        android:layout_marginTop="80dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textColorHint="#000000" />
+        android:textColorHint="#7a7a7a" />
 
     <EditText
         android:layout_width="fill_parent"
@@ -35,14 +36,13 @@
         android:inputType="textPassword"
         android:layout_below="@+id/user_Name"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="45dp"
-        android:textColorHint="#000000" />
+        android:layout_marginTop="40dp"
+        android:textColorHint="#7a7a7a" />
 
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Log In"
-
         android:id="@+id/loginbutton"
         android:layout_below="@+id/password"
         android:layout_centerHorizontal="true"
@@ -51,13 +51,14 @@
         android:textColor="#ffffff" />
 
     <TextView
+        android:layout_below="@+id/loginbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/appby"
         android:id="@+id/textView21"
         android:gravity="center"
-        android:textColor="#ffffff"
+        android:textColor="#a39f9f"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:textSize="8dp" />
@@ -67,9 +68,11 @@
         android:layout_height="wrap_content"
         android:text="BAY POWER TECHNOLOGIES LTD."
         android:id="@+id/textView19"
+        android:layout_marginTop="20dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textColor="#000000"
         android:textSize="22dp"
-        android:gravity="center" />
+        android:gravity="center"
+        android:singleLine="false" />
 </RelativeLayout>
