--- a/app/src/main/res/layout/content_dash.xml
+++ b/app/src/main/res/layout/content_dash.xml
@@ -63,13 +63,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/datepicker"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/appby"
         android:id="@+id/textView20"
         android:textSize="8dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:gravity="bottom"
+        android:gravity="center"
         android:textColor="#ffffff" />
 
 </RelativeLayout>
