--- a/app/src/main/res/layout/content_workupdateentry.xml
+++ b/app/src/main/res/layout/content_workupdateentry.xml
@@ -8,37 +8,33 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/app_bar_dailyworkprogram"
+    tools:showIn="@layout/app_bar_client_update"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:scaleType="fitXY">
 
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:showIn="@layout/app_bar_dailyworkprogram"
-        tools:context="ayon.rahman.shafiqur.bptl.dailyworkprogram">
+        tools:context="ayon.rahman.shafiqur.bptl.workupdateentry">
 
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/clientNameInSpinner"
-
+            android:id="@+id/clientNameInSpinneru"
             android:layout_alignParentStart="true"
             android:layout_marginTop="20dp" />
 
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/serviceNamespinner"
-            android:layout_below="@+id/clientNameInSpinner"
+            android:id="@+id/serviceNamespinneru"
+            android:layout_below="@+id/clientNameInSpinneru"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp" />
 
@@ -46,8 +42,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Start Time"
-            android:id="@+id/startTimeBtn"
-            android:layout_below="@+id/serviceNamespinner"
+            android:id="@+id/startTimeBtnu"
+            android:layout_below="@+id/serviceNamespinneru"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:background="#01B0B5"
@@ -58,9 +54,9 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Start Time"
-            android:id="@+id/startTimetextView"
+            android:id="@+id/startTimetextViewu"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/startTimeBtn"
+            android:layout_below="@+id/startTimeBtnu"
             android:textSize="20dp"
             android:gravity="center"
             android:layout_marginTop="20dp" />
@@ -69,8 +65,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="End Time"
-            android:id="@+id/endButton"
-            android:layout_below="@+id/startTimetextView"
+            android:id="@+id/endButtonu"
+            android:layout_below="@+id/startTimetextViewu"
             android:layout_alignParentEnd="true"
             android:background="#01B0B5"
             android:textColor="#ffffff"
@@ -81,10 +77,10 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="End Time "
-            android:id="@+id/endTimetextView"
+            android:id="@+id/endTimetextViewu"
             android:textSize="20dp"
             android:gravity="center"
-            android:layout_below="@+id/endButton"
+            android:layout_below="@+id/endButtonu"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp" />
         <!--
@@ -103,8 +99,8 @@
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/ws"
-            android:layout_below="@+id/endTimetextView"
+            android:id="@+id/wsu"
+            android:layout_below="@+id/endTimetextViewu"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp" />
         <!--
@@ -125,8 +121,8 @@
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/mot"
-            android:layout_below="@+id/ws"
+            android:id="@+id/motu"
+            android:layout_below="@+id/wsu"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp" />
 
@@ -136,17 +132,17 @@
             android:inputType="textMultiLine"
             android:ems="10"
             android:hint="Remarks"
-            android:id="@+id/remarks"
-            android:layout_below="@+id/mot"
+            android:id="@+id/remarksu"
+            android:layout_below="@+id/motu"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp" />
 
         <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/savework"
-            android:text="Save"
-            android:layout_below="@id/remarks"
+            android:id="@+id/saveworku"
+            android:text="Update"
+            android:layout_below="@id/remarksu"
             android:layout_centerHorizontal="true"
             android:background="#01B0B5"
             android:textColor="#ffffff"
