--- a/app/src/main/res/layout/content_client_view_by_date.xml
+++ b/app/src/main/res/layout/content_client_view_by_date.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-
-    android:foregroundGravity="center"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:foregroundGravity="center"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/app_bar_client_view_by_date"
-    tools:context="ayon.rahman.shafiqur.bptl.clientViewByDate">
+    tools:context="ayon.rahman.shafiqur.bptl.clientViewByDate"
+    tools:showIn="@layout/app_bar_client_view_by_date">
 
     <Button
         android:id="@+id/bydate"
@@ -21,8 +21,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
-        android:text="Select Start Date"
-        android:background="#01B0B5" />
+        android:background="#01B0B5"
+        android:text="Select Start Date" />
 
     <Button
         android:id="@+id/viewAll"
@@ -31,8 +31,8 @@
         android:layout_below="@+id/bydate"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="68dp"
-        android:text="Select End Date"
-        android:background="#01B0B5" />
+        android:background="#01B0B5"
+        android:text="Select End Date" />
 
     <Button
         android:id="@+id/viewDates"
@@ -41,8 +41,8 @@
         android:layout_below="@+id/viewAll"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:text="View Entries"
-        android:background="#01B0B5" />
+        android:background="#01B0B5"
+        android:text="View Entries" />
 
     <TextView
         android:id="@+id/starttv"
