--- a/app/src/main/res/layout/content_client_view_details.xml
+++ b/app/src/main/res/layout/content_client_view_details.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -9,160 +9,160 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/app_bar_client_view_details"
-    tools:context="ayon.rahman.shafiqur.bptl.clientViewDetails">
+    tools:context="ayon.rahman.shafiqur.bptl.clientViewDetails"
+    tools:showIn="@layout/app_bar_client_view_details">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Client Details View"
-        android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="20dp"
         android:gravity="center"
-        android:textIsSelectable="false" />
+        android:text="Client Details View"
+        android:textIsSelectable="false"
+        android:textSize="20dp" />
 
     <TextView
+        android:id="@+id/ff"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="All fields and new design will be updated in the next Release"
-        android:id="@+id/ff"
-        android:layout_below="@+id/textView"
         android:layout_alignParentStart="true"
-        android:textSize="10dp"
+        android:layout_below="@+id/textView"
+        android:layout_marginTop="10dp"
         android:gravity="center"
-        android:textIsSelectable="false"
+        android:text="All fields and new design will be updated in the next Release"
         android:textColor="#d06868"
-        android:layout_marginTop="10dp" />
+        android:textIsSelectable="false"
+        android:textSize="10dp" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/textView2"
-        android:layout_below="@+id/ff"
-        android:layout_alignParentStart="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/ff" />
+
+    <TextView
         android:id="@+id/textView3"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentStart="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView2" />
+
+    <TextView
         android:id="@+id/textView4"
-        android:layout_below="@+id/textView3"
-        android:layout_alignParentStart="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView3" />
+
+    <TextView
         android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView4"
         android:layout_toLeftOf="@+id/textView" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/textView6"
-        android:layout_below="@+id/textView5"
-        android:layout_alignParentStart="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView5" />
+
+    <TextView
         android:id="@+id/textView7"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView6"
-        android:layout_alignParentLeft="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView6" />
+
+    <TextView
         android:id="@+id/textView8"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView7"
-        android:layout_alignParentLeft="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView7" />
+
+    <TextView
         android:id="@+id/textView9"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView8"
-        android:layout_alignParentLeft="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView8" />
+
+    <TextView
         android:id="@+id/textView10"
-        android:layout_below="@+id/textView9"
-        android:layout_alignParentStart="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView9" />
+
+    <TextView
         android:id="@+id/textView11"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView10"
-        android:layout_alignParentLeft="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView10" />
+
+    <TextView
         android:id="@+id/textView12"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView11"
-        android:layout_alignParentLeft="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView11" />
+
+    <TextView
         android:id="@+id/textView13"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView12"
-        android:layout_alignParentLeft="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView12" />
+
+    <TextView
         android:id="@+id/textView14"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView13"
-        android:layout_alignParentLeft="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView13" />
+
+    <TextView
         android:id="@+id/textView15"
-        android:layout_below="@+id/textView14"
-        android:layout_alignParentStart="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView14" />
+
+    <TextView
         android:id="@+id/textView16"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView15"
-        android:layout_alignParentLeft="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView15" />
+
+    <TextView
         android:id="@+id/textView17"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView16"
-        android:layout_alignParentLeft="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView18"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView17"
-        android:layout_alignParentLeft="true" />
+        android:layout_below="@+id/textView16" />
+
+    <TextView
+        android:id="@+id/textView18"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView17" />
 </RelativeLayout>
