--- a/app/src/main/res/layout/content_dash.xml
+++ b/app/src/main/res/layout/content_dash.xml
@@ -1,76 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-
     xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/lion"
+    android:gravity="center"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/app_bar_dash"
-    android:background="@drawable/lion"
 
-    android:gravity="center">
+    tools:showIn="@layout/app_bar_dash">
 
     <Button
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
-        android:text="New Client Entry "
         android:id="@+id/customer"
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:background="#AF4F8F"
         android:layout_marginTop="20dp"
+        android:background="#AF4F8F"
+        android:text="New Client Entry "
         android:textColor="#ffffff" />
 
     <Button
 
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
-        android:text="Daily Work Program Entry"
         android:id="@+id/dailywork"
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/customer"
-        android:layout_alignParentStart="true"
-        android:background="#AF4F8F"
         android:layout_marginTop="20dp"
-        android:textColor="#ffffff" />
-
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
-        android:text="Entered Client Details "
-        android:id="@+id/clientview"
-        android:layout_below="@+id/dailywork"
-        android:layout_alignParentStart="true"
         android:background="#AF4F8F"
-        android:layout_marginTop="40dp"
+        android:text="Daily Work Program Entry"
         android:textColor="#ffffff" />
 
     <Button
+        android:id="@+id/clientview"
         android:layout_width="fill_parent"
         android:layout_height="60dp"
-        android:text="Daily Work Program View"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/dailywork"
+        android:layout_marginTop="40dp"
+        android:background="#AF4F8F"
+        android:text="Entered Client Details "
+        android:textColor="#ffffff" />
+
+    <Button
         android:id="@+id/datepicker"
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
         android:layout_below="@+id/clientview"
         android:layout_centerHorizontal="true"
-        android:background="#AF4F8F"
         android:layout_marginTop="20dp"
+        android:background="#AF4F8F"
+        android:text="Daily Work Program View"
         android:textColor="#ffffff" />
 
     <TextView
+        android:id="@+id/textView20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/datepicker"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/appby"
-        android:id="@+id/textView20"
-        android:textSize="8dp"
         android:layout_alignParentBottom="true"
+        android:layout_below="@+id/datepicker"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:textColor="#ffffff" />
+        android:text="@string/appby"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="#ffffff"
+        android:textSize="8dp" />
 
 </RelativeLayout>
