--- a/app/src/main/res/layout/content_workupdateentry.xml
+++ b/app/src/main/res/layout/content_workupdateentry.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:scaleType="fitXY"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/app_bar_client_update"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:scaleType="fitXY">
+    tools:showIn="@layout/app_bar_client_update">
 
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -24,65 +24,65 @@
         tools:context="ayon.rahman.shafiqur.bptl.workupdateentry">
 
         <Spinner
+            android:id="@+id/clientNameInSpinneru"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/clientNameInSpinneru"
             android:layout_alignParentStart="true"
             android:layout_marginTop="20dp" />
 
         <Spinner
+            android:id="@+id/serviceNamespinneru"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/serviceNamespinneru"
             android:layout_below="@+id/clientNameInSpinneru"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp" />
 
         <Button
+            android:id="@+id/startTimeBtnu"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Start Time"
-            android:id="@+id/startTimeBtnu"
-            android:layout_below="@+id/serviceNamespinneru"
-            android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/serviceNamespinneru"
+            android:layout_marginTop="20dp"
             android:background="#01B0B5"
-            android:textColor="#ffffff"
-            android:layout_marginTop="20dp" />
+            android:text="Start Time"
+            android:textColor="#ffffff" />
 
         <TextView
+            android:id="@+id/startTimetextViewu"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Start Time"
-            android:id="@+id/startTimetextViewu"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/startTimeBtnu"
-            android:textSize="20dp"
+            android:layout_marginTop="20dp"
             android:gravity="center"
-            android:layout_marginTop="20dp" />
+            android:text="Start Time"
+            android:textSize="20dp" />
 
         <Button
+            android:id="@+id/endButtonu"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="End Time"
-            android:id="@+id/endButtonu"
-            android:layout_below="@+id/startTimetextViewu"
             android:layout_alignParentEnd="true"
+            android:layout_below="@+id/startTimetextViewu"
+            android:layout_marginTop="20dp"
             android:background="#01B0B5"
-            android:textColor="#ffffff"
-            android:layout_marginTop="20dp" />
+            android:text="End Time"
+            android:textColor="#ffffff" />
 
 
         <TextView
+            android:id="@+id/endTimetextViewu"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="End Time "
-            android:id="@+id/endTimetextViewu"
-            android:textSize="20dp"
-            android:gravity="center"
             android:layout_below="@+id/endButtonu"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="End Time "
+            android:textSize="20dp" />
         <!--
                 <EditText
                     android:layout_width="fill_parent"
@@ -97,9 +97,9 @@
 
 
         <Spinner
+            android:id="@+id/wsu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/wsu"
             android:layout_below="@+id/endTimetextViewu"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp" />
@@ -119,34 +119,34 @@
              />-->
 
         <Spinner
+            android:id="@+id/motu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/motu"
             android:layout_below="@+id/wsu"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp" />
 
         <EditText
+            android:id="@+id/remarksu"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
-            android:ems="10"
-            android:hint="Remarks"
-            android:id="@+id/remarksu"
             android:layout_below="@+id/motu"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+            android:ems="10"
+            android:hint="Remarks"
+            android:inputType="textMultiLine" />
 
         <Button
+            android:id="@+id/saveworku"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/saveworku"
-            android:text="Update"
             android:layout_below="@id/remarksu"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
             android:background="#01B0B5"
-            android:textColor="#ffffff"
-            android:layout_marginTop="20dp" />
+            android:text="Update"
+            android:textColor="#ffffff" />
     </RelativeLayout>
 
 
