--- a/app/src/main/res/layout/content_workviewbydatebetween.xml
+++ b/app/src/main/res/layout/content_workviewbydatebetween.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/app_bar_workviewbydatebetween"
-    tools:context="ayon.rahman.shafiqur.bptl.workviewbydatebetween">
+    tools:context="ayon.rahman.shafiqur.bptl.workviewbydatebetween"
+    tools:showIn="@layout/app_bar_workviewbydatebetween">
 
     <ListView
+        android:id="@+id/listView2"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/listView2"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="false" />
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
