--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -21,18 +21,18 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="left"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:textSize="18dp"
         android:text="Bay Power Technologies Limited"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textIsSelectable="false"
-        android:layout_gravity="left" />
+        android:textSize="18dp" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Mobile ERP System"
-        android:layout_gravity="left" />
+        android:layout_gravity="left"
+        android:text="Mobile ERP System" />
 
 </LinearLayout>
