--- a/app/src/main/res/layout/spinnercustom.xml
+++ b/app/src/main/res/layout/spinnercustom.xml
@@ -4,5 +4,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="left"
-    android:textColor="@color/white"
-    android:padding="5dip" />
+    android:padding="5dip"
+    android:textColor="@color/white" />
