--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,6 +5,5 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="Log Out"
-        app:showAsAction="never"
-        />
+        app:showAsAction="never" />
 </menu>
