--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,7 @@
         android:layout_marginTop="80dp"
         android:gravity="center"
         android:hint="User Name"
-        android:textColor="#000000"
-        android:textColorHint="#7a7a7a" />
+        android:textColor="#000000" />
 
     <EditText
         android:id="@+id/password"
@@ -36,8 +35,7 @@
         android:gravity="center"
         android:hint="Password"
         android:inputType="textPassword"
-        android:textColor="#000000"
-        android:textColorHint="#7a7a7a" />
+        android:textColor="#000000" />
 
     <Button
         android:id="@+id/loginbutton"
